Use valueOf method instead of constructor since valueOf has higher performance.